--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,4 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "presentation": {
         "reveal": "silent",
@@ -9,21 +7,41 @@
     },
     "tasks": [
         {
-            "label": "build",
+            "label": "MkDocs build",
             "type": "shell",
-            "command": "mkdocs",
-            "args": ["build"],
+            "command": "python",
+            "args": ["-m", "mkdocs", "build"],
             "group":{
                 "kind": "build",
                 "isDefault": true
             }
         },
         {
-            "label": "serve",
+            "label": "MkDocs serve",
             "type": "shell",
-            "command": "mkdocs",
-            "args": ["serve"],
-            "isBackground": true
+            "command": "python",
+            "args": ["-m", "mkdocs", "serve"],
+            "detail": "Run `python -m mkdocs serve`",
+            "icon": {
+                "id": "book"
+            },
+            "isBackground": true,
+            "problemMatcher":
+            {
+                "owner": "python",
+                "fileLocation": "relative",
+                "pattern": {
+                    "regexp": "^([^\\\\s].*)\\\\((\\\\d+,\\\\d+)\\\\):\\\\s*(.*)$",
+                    "file": 1,
+                    "location": 2,
+                    "message": 3
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^INFO\\s*-\\s*\\[\\d{1,2}:\\d{1,2}:\\d{1,2}\\] Detected file changes",
+                    "endsPattern": "^INFO\\s*-\\s*Documentation built in \\d*\\.\\d* seconds"
+                }
+            }
         }
     ]
 }
