--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
 site_name: My Docs
 
-theme: material
+theme:
+    name: material
+    features:
+        - content.code.copy
+        - navigation.tabs
 
 nav:
     - Programming:
